SequencedCollection features in JDK 21: get(0) -> getFirst()